--- a/public/themes/bootstrap4-light-blue/theme.css
+++ b/public/themes/bootstrap4-light-blue/theme.css
@@ -4309,6 +4309,11 @@
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+.p-fileupload .p-fileupload-content .p-fileupload-content-item {
+  padding: 1rem;
+  border: 1px solid #dee2e6;
+  border-radius: 6px;
+}
 .p-fileupload .p-progressbar {
   height: 0.25rem;
 }
@@ -4336,19 +4341,19 @@
   border-radius: 4px;
   padding: 1rem;
 }
-.p-breadcrumb ol li .p-menuitem-link {
+.p-breadcrumb ol li .p-menuitem-action {
   transition: box-shadow 0.15s;
   border-radius: 4px;
 }
-.p-breadcrumb ol li .p-menuitem-link:focus {
+.p-breadcrumb ol li .p-menuitem-action:focus {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
 }
-.p-breadcrumb ol li .p-menuitem-link .p-menuitem-text {
+.p-breadcrumb ol li .p-menuitem-action .p-menuitem-text {
   color: #007bff;
 }
-.p-breadcrumb ol li .p-menuitem-link .p-menuitem-icon {
+.p-breadcrumb ol li .p-menuitem-action .p-menuitem-icon {
   color: #007bff;
 }
 .p-breadcrumb ol li.p-breadcrumb-chevron {
@@ -4433,7 +4438,7 @@
 .p-contextmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-menuitem-icon, .p-contextmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-submenu-icon {
   color: #212529;
 }
-.p-contextmenu .p-menu-separator {
+.p-contextmenu .p-menuitem-separator {
   border-top: 1px solid #dee2e6;
   margin: 0.5rem 0;
 }
@@ -4704,7 +4709,6 @@
   border-top-right-radius: 0;
   border-top-left-radius: 0;
 }
-.p-menu .p-menu-separator,
 .p-menu .p-menuitem-separator {
   border-top: 1px solid #dee2e6;
   margin: 0.5rem 0;
@@ -4809,7 +4813,6 @@
   box-shadow: none;
   width: 12.5rem;
 }
-.p-menubar .p-submenu-list .p-menu-separator,
 .p-menubar .p-submenu-list .p-menuitem-separator {
   border-top: 1px solid #dee2e6;
   margin: 0.5rem 0;
@@ -4848,7 +4851,7 @@
     box-shadow: none;
     width: 100%;
   }
-  .p-menubar .p-menubar-root-list .p-menu-separator {
+  .p-menubar .p-menubar-root-list .p-menuitem-separator {
     border-top: 1px solid #dee2e6;
     margin: 0.5rem 0;
   }
@@ -4859,11 +4862,11 @@
     width: 100%;
     position: static;
   }
-  .p-menubar .p-menubar-root-list .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-menuitem .p-menuitem-content .p-menuitem-action .p-submenu-icon {
     margin-left: auto;
     transition: transform 0.15s;
   }
-  .p-menubar .p-menubar-root-list .p-menuitem.p-menuitem-active > .p-menuitem-content > .p-menuitem-link > .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-menuitem.p-menuitem-active > .p-menuitem-content > .p-menuitem-action > .p-submenu-icon {
     transform: rotate(-180deg);
   }
   .p-menubar .p-menubar-root-list .p-submenu-list {
@@ -4876,7 +4879,7 @@
     transition: transform 0.15s;
     transform: rotate(90deg);
   }
-  .p-menubar .p-menubar-root-list .p-submenu-list .p-menuitem-active > .p-menuitem-content > .p-menuitem-link > .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-submenu-list .p-menuitem-active > .p-menuitem-content > .p-menuitem-action > .p-submenu-icon {
     transform: rotate(-90deg);
   }
   .p-menubar .p-menubar-root-list .p-menuitem {
