--- a/public/themes/lara-light-indigo/theme.css
+++ b/public/themes/lara-light-indigo/theme.css
@@ -4272,6 +4272,11 @@
   border-bottom-right-radius: 6px;
   border-bottom-left-radius: 6px;
 }
+.p-fileupload .p-fileupload-content .p-fileupload-content-item {
+  padding: 1rem;
+  border: 1px solid #dee2e6;
+  border-radius: 6px;
+}
 .p-fileupload .p-progressbar {
   height: 0.25rem;
 }
@@ -4299,19 +4304,19 @@
   border-radius: 6px;
   padding: 1rem;
 }
-.p-breadcrumb ol li .p-menuitem-link {
+.p-breadcrumb ol li .p-menuitem-action {
   transition: box-shadow 0.2s;
   border-radius: 6px;
 }
-.p-breadcrumb ol li .p-menuitem-link:focus {
+.p-breadcrumb ol li .p-menuitem-action:focus {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem #C7D2FE;
 }
-.p-breadcrumb ol li .p-menuitem-link .p-menuitem-text {
+.p-breadcrumb ol li .p-menuitem-action .p-menuitem-text {
   color: #495057;
 }
-.p-breadcrumb ol li .p-menuitem-link .p-menuitem-icon {
+.p-breadcrumb ol li .p-menuitem-action .p-menuitem-icon {
   color: #6c757d;
 }
 .p-breadcrumb ol li.p-breadcrumb-chevron {
@@ -4396,7 +4401,7 @@
 .p-contextmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-menuitem-icon, .p-contextmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-submenu-icon {
   color: #6c757d;
 }
-.p-contextmenu .p-menu-separator {
+.p-contextmenu .p-menuitem-separator {
   border-top: 1px solid #dee2e6;
   margin: 0.25rem 0;
 }
@@ -4667,7 +4672,6 @@
   border-top-right-radius: 0;
   border-top-left-radius: 0;
 }
-.p-menu .p-menu-separator,
 .p-menu .p-menuitem-separator {
   border-top: 1px solid #dee2e6;
   margin: 0.25rem 0;
@@ -4772,7 +4776,6 @@
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
   width: 12.5rem;
 }
-.p-menubar .p-submenu-list .p-menu-separator,
 .p-menubar .p-submenu-list .p-menuitem-separator {
   border-top: 1px solid #dee2e6;
   margin: 0.25rem 0;
@@ -4811,7 +4814,7 @@
     box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
     width: 100%;
   }
-  .p-menubar .p-menubar-root-list .p-menu-separator {
+  .p-menubar .p-menubar-root-list .p-menuitem-separator {
     border-top: 1px solid #dee2e6;
     margin: 0.25rem 0;
   }
@@ -4822,11 +4825,11 @@
     width: 100%;
     position: static;
   }
-  .p-menubar .p-menubar-root-list .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-menuitem .p-menuitem-content .p-menuitem-action .p-submenu-icon {
     margin-left: auto;
     transition: transform 0.2s;
   }
-  .p-menubar .p-menubar-root-list .p-menuitem.p-menuitem-active > .p-menuitem-content > .p-menuitem-link > .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-menuitem.p-menuitem-active > .p-menuitem-content > .p-menuitem-action > .p-submenu-icon {
     transform: rotate(-180deg);
   }
   .p-menubar .p-menubar-root-list .p-submenu-list {
@@ -4839,7 +4842,7 @@
     transition: transform 0.2s;
     transform: rotate(90deg);
   }
-  .p-menubar .p-menubar-root-list .p-submenu-list .p-menuitem-active > .p-menuitem-content > .p-menuitem-link > .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-submenu-list .p-menuitem-active > .p-menuitem-content > .p-menuitem-action > .p-submenu-icon {
     transform: rotate(-90deg);
   }
   .p-menubar .p-menubar-root-list .p-menuitem {
