--- a/public/themes/tailwind-light/theme.css
+++ b/public/themes/tailwind-light/theme.css
@@ -4332,6 +4332,11 @@
   border-bottom-right-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
 }
+.p-fileupload .p-fileupload-content .p-fileupload-content-item {
+  padding: 1rem;
+  border: 1px solid #dee2e6;
+  border-radius: 6px;
+}
 .p-fileupload .p-progressbar {
   height: 0.25rem;
 }
@@ -4359,19 +4364,19 @@
   border-radius: 0.375rem;
   padding: 1rem;
 }
-.p-breadcrumb ol li .p-menuitem-link {
+.p-breadcrumb ol li .p-menuitem-action {
   transition: none;
   border-radius: 0.375rem;
 }
-.p-breadcrumb ol li .p-menuitem-link:focus {
+.p-breadcrumb ol li .p-menuitem-action:focus {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 1px #6366F1;
 }
-.p-breadcrumb ol li .p-menuitem-link .p-menuitem-text {
+.p-breadcrumb ol li .p-menuitem-action .p-menuitem-text {
   color: #3f3f46;
 }
-.p-breadcrumb ol li .p-menuitem-link .p-menuitem-icon {
+.p-breadcrumb ol li .p-menuitem-action .p-menuitem-icon {
   color: #71717A;
 }
 .p-breadcrumb ol li.p-breadcrumb-chevron {
@@ -4456,7 +4461,7 @@
 .p-contextmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-menuitem-icon, .p-contextmenu .p-menuitem:not(.p-highlight):not(.p-disabled) > .p-menuitem-content:hover .p-menuitem-action .p-submenu-icon {
   color: #71717A;
 }
-.p-contextmenu .p-menu-separator {
+.p-contextmenu .p-menuitem-separator {
   border-top: 1px solid #f3f4f6;
   margin: 0.25rem 0;
 }
@@ -4727,7 +4732,6 @@
   border-top-right-radius: 0;
   border-top-left-radius: 0;
 }
-.p-menu .p-menu-separator,
 .p-menu .p-menuitem-separator {
   border-top: 1px solid #f3f4f6;
   margin: 0.25rem 0;
@@ -4832,7 +4836,6 @@
   box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   width: 12.5rem;
 }
-.p-menubar .p-submenu-list .p-menu-separator,
 .p-menubar .p-submenu-list .p-menuitem-separator {
   border-top: 1px solid #f3f4f6;
   margin: 0.25rem 0;
@@ -4871,7 +4874,7 @@
     box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     width: 100%;
   }
-  .p-menubar .p-menubar-root-list .p-menu-separator {
+  .p-menubar .p-menubar-root-list .p-menuitem-separator {
     border-top: 1px solid #f3f4f6;
     margin: 0.25rem 0;
   }
@@ -4882,11 +4885,11 @@
     width: 100%;
     position: static;
   }
-  .p-menubar .p-menubar-root-list .p-menuitem .p-menuitem-content .p-menuitem-link .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-menuitem .p-menuitem-content .p-menuitem-action .p-submenu-icon {
     margin-left: auto;
     transition: transform 0.2s;
   }
-  .p-menubar .p-menubar-root-list .p-menuitem.p-menuitem-active > .p-menuitem-content > .p-menuitem-link > .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-menuitem.p-menuitem-active > .p-menuitem-content > .p-menuitem-action > .p-submenu-icon {
     transform: rotate(-180deg);
   }
   .p-menubar .p-menubar-root-list .p-submenu-list {
@@ -4899,7 +4902,7 @@
     transition: transform 0.2s;
     transform: rotate(90deg);
   }
-  .p-menubar .p-menubar-root-list .p-submenu-list .p-menuitem-active > .p-menuitem-content > .p-menuitem-link > .p-submenu-icon {
+  .p-menubar .p-menubar-root-list .p-submenu-list .p-menuitem-active > .p-menuitem-content > .p-menuitem-action > .p-submenu-icon {
     transform: rotate(-90deg);
   }
   .p-menubar .p-menubar-root-list .p-menuitem {
