--- a/public/themes/bootstrap4-light-purple/theme.css
+++ b/public/themes/bootstrap4-light-purple/theme.css
@@ -4341,29 +4341,29 @@
   border-radius: 4px;
   padding: 1rem;
 }
-.p-breadcrumb ol li .p-menuitem-action {
+.p-breadcrumb .p-breadcrumb-list li .p-menuitem-action {
   transition: box-shadow 0.15s;
   border-radius: 4px;
 }
-.p-breadcrumb ol li .p-menuitem-action:focus {
+.p-breadcrumb .p-breadcrumb-list li .p-menuitem-action:focus {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.2rem rgba(136, 60, 174, 0.5);
 }
-.p-breadcrumb ol li .p-menuitem-action .p-menuitem-text {
+.p-breadcrumb .p-breadcrumb-list li .p-menuitem-action .p-menuitem-text {
   color: #883cae;
 }
-.p-breadcrumb ol li .p-menuitem-action .p-menuitem-icon {
+.p-breadcrumb .p-breadcrumb-list li .p-menuitem-action .p-menuitem-icon {
   color: #883cae;
 }
-.p-breadcrumb ol li.p-breadcrumb-chevron {
+.p-breadcrumb .p-breadcrumb-list li.p-menuitem-seperator {
   margin: 0 0.5rem 0 0.5rem;
   color: #6c757d;
 }
-.p-breadcrumb ol li:last-child .p-menuitem-text {
+.p-breadcrumb .p-breadcrumb-list li:last-child .p-menuitem-text {
   color: #6c757d;
 }
-.p-breadcrumb ol li:last-child .p-menuitem-icon {
+.p-breadcrumb .p-breadcrumb-list li:last-child .p-menuitem-icon {
   color: #6c757d;
 }
 
