--- a/public/themes/nova/theme.css
+++ b/public/themes/nova/theme.css
@@ -3767,7 +3767,7 @@
 .p-accordion .p-accordion-header:not(.p-disabled) .p-accordion-header-link:focus {
   outline: 0 none;
   outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem #8dcdff;
+  box-shadow: inset 0 0 0 0.2rem #8dcdff;
 }
 .p-accordion .p-accordion-header:not(.p-highlight):not(.p-disabled):hover .p-accordion-header-link {
   background: #dbdbdb;
