Replace p-menuitem-action with p-menuitem-link on Menus

--- a/src/assets/styles/landing/_components.scss
+++ b/src/assets/styles/landing/_components.scss
@@ -10,7 +10,7 @@
         }
     }
 
-    .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-action {
+    .p-tabmenu .p-tabmenu-nav .p-tabmenuitem .p-menuitem-link {
         background: transparent;
     }
 
